example/lib/src/arbs/errors/app_af.arb
{
  "@@locale": "af",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Daar het 'n fout voorgekom",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Daar het 'n onverwagte fout voorgekom",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Bug report sent successfully.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}